@@ -33,6 +33,9 @@ class Actions(object):
             return False
 
     def _correct_type(self, record):
+        if not isinstance(record, dict):
+            return record
+
         if 'Id' in record.keys():
             record['Id'] = int(record['Id'])
         if 'dueDate' in record.keys():
@@ -43,44 +46,36 @@ class Actions(object):
             record['paid'] = int(record['paid'])
         if 'alarm' in record.keys():
             record['alarm'] = int(record['alarm'])
-        if 'caId' in record.keys():
-            record['caId'] = int(record['caId'])
+        if 'catId' in record.keys():
+            record['catId'] = int(record['catId'])
         return record
 
     def get_monthly_totals(self, status, month, year):
         # Return a list of categories and totals for the given month
-        # Delimeters for our search
-        firstOfMonth = scheduler.first_of_month(month, year)
-        lastOfMonth = scheduler.last_of_month(month, year)
+        #try:
+        ret = []
+        records = self.dbus_interface.get_monthly_totals(status, month, year)
+        for record in records:
+            record = self._correct_type(record)
+            ret.append(record)
+        return ret
+        #except dbus.DBusException:
+        #    if self.__init__():
+        #        return self.get_monthly_totals(status, month, year)
 
-        # Determine status criteria
-        status = status < 2 and ' = %s' % status or ' in (0,1)'
-
-        stmt = 'select categoryName, sum(amountDue) as amount, color' \
-            ' from br_billstable, br_categoriestable where' \
-            ' paid %s' \
-            ' and dueDate >= ? and dueDate <= ?' \
-            ' and br_categoriestable.Id = br_billstable.catId' \
-            ' GROUP BY catId, color' \
-            ' ORDER BY dueDate ASC' % status
-        params = [firstOfMonth, lastOfMonth]
-        records = self.executeSql(stmt, params)
-
-        return records
 
     def get_monthly_bills(self, status, month, year):
-        # Delimeters for our search
-        firstOfMonth = scheduler.first_of_month(month, year)
-        lastOfMonth = scheduler.last_of_month(month, year)
-
-        # Determine status criteria
-        status = status < 2 and ' = %s' % status or ' in (0,1)'
-
-        records = self.get_bills('paid %s' \
-            ' and dueDate >= %s and dueDate <= %s' \
-            ' ORDER BY dueDate DESC' % (status, firstOfMonth, lastOfMonth))
-        return records
-
+        try:
+            ret = []
+            records = self.dbus_interface.get_monthly_bills(status, month, year)
+            for record in records:
+                record = self._correct_type(record)
+                ret.append(record)
+            return ret
+        except dbus.DBusException:
+            if self.__init__():
+                return self.get_monthly_bills(status, month, year)
+        
     def get_bills(self, kwargs):
         """ Returns one or more records that meet the criteria passed """
         try:
